@@ -7,20 +7,17 @@ import com.team5.nbe341team05.domain.order.service.OrderService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Configuration
 @RequiredArgsConstructor
@@ -28,6 +25,7 @@ public class BaseInitData {
     private final CartService cartService;
     private final MenuService menuService;
     private final OrderService orderService;
+    private final ResourceLoader resourceLoader;  // ResourceLoader 추가
 
     @Value("${upload.path}")
     String savePath;
@@ -47,15 +45,18 @@ public class BaseInitData {
     public void makeSampleMenus() throws IOException {
         if (menuService.count() > 0) return;
 
-        for (int i = 1; i <= 8; i++) {
-            String fileName = String.format("menu%d.jpg", i );
-            Path filePath = Paths.get(savePath + fileName);
+        for (int i = 1; i <= 35; i++) {
+            int num = ((i-1) % 8) + 1;
+            String fileName = String.format("menu%d.jpg", num);
+
+            // Resource를 사용하여 classpath에서 이미지 파일 읽기
+            Resource resource = resourceLoader.getResource("classpath:static/images/" + fileName);
 
             MultipartFile multipartFile = new MockMultipartFile(
                     fileName,
                     fileName,
                     "image/jpeg",
-                    Files.readAllBytes(filePath)
+                    resource.getInputStream().readAllBytes()
             ) {
             };
 
